Paso strings a la carpeta correspondiente

--- a/app/src/main/res/layout/common_fields_register.xml
+++ b/app/src/main/res/layout/common_fields_register.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/name_title_add"
+        android:text="@string/name_hyphen"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:fontFamily="@font/comixloud"
@@ -25,7 +25,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/light_blue_shadow"
         android:fontFamily="@font/comixloud"
-        android:hint="Nombre"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         android:textColor="@color/beige"
         android:textColorHint="@color/beige_shadow"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="*"
+        android:text="@string/asterisk"
         android:textColor="@color/red"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/name"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/surname_title_add"
+        android:text="@string/surname_hyphen"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:fontFamily="@font/comixloud"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/light_blue_shadow"
         android:fontFamily="@font/comixloud"
-        android:hint="Apellido"
+        android:hint="@string/surname"
         android:inputType="textPersonName"
         android:textColor="@color/beige"
         android:textColorHint="@color/beige_shadow"
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="*"
+        android:text="@string/asterisk"
         android:textColor="@color/red"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/surname"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/comixloud"
-        android:text="- Avatar"
+        android:text="@string/avatar_hyphen"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:text="*"
+        android:text="@string/asterisk"
         android:textColor="@color/red"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/avatarTitle"
@@ -127,7 +127,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:clickable="true"
-            android:contentDescription="Avatar 1"
+            android:contentDescription="@string/avatar_1"
             android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/first_avatar" />
@@ -137,7 +137,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:clickable="true"
-            android:contentDescription="Avatar 2"
+            android:contentDescription="@string/avatar_2"
             android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/second_avatar" />
@@ -147,7 +147,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:clickable="true"
-            android:contentDescription="Avatar 3"
+            android:contentDescription="@string/avatar_3"
             android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/third_avatar" />
@@ -168,7 +168,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:clickable="true"
-            android:contentDescription="Avatar 4"
+            android:contentDescription="@string/avatar_4"
             android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/fourth_avatar" />
@@ -178,7 +178,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:clickable="true"
-            android:contentDescription="Avatar 5"
+            android:contentDescription="@string/avatar_5"
             android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/fifth_avatar" />
