--- a/app/src/main/res/layout/common_patient_fields.xml
+++ b/app/src/main/res/layout/common_patient_fields.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="- Edad"
+        android:text="@string/age_hyphen"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:fontFamily="@font/comixloud"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/light_blue_shadow"
         android:fontFamily="@font/comixloud"
-        android:hint="Edad"
+        android:hint="@string/age"
         android:inputType="number"
         android:textColor="@color/beige"
         android:textColorHint="@color/beige_shadow"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="*"
+        android:text="@string/asterisk"
         android:textColor="@color/red"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/age"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="- Observaciones"
+        android:text="@string/observations_hyphen"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:fontFamily="@font/comixloud"
@@ -76,7 +76,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/light_blue_shadow"
         android:fontFamily="@font/comixloud"
-        android:hint="Observaciones"
+        android:hint="@string/observations"
         android:inputType="textMultiLine"
         android:textColor="@color/beige"
         android:textColorHint="@color/beige_shadow"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:fontFamily="@font/comixloud"
-        android:text="- Genero"
+        android:text="@string/genre_hyphen"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="*"
+        android:text="@string/asterisk"
         android:textColor="@color/red"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/genreTitle"
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
             android:fontFamily="@font/comixregular"
-            android:text="Hombre"
+            android:text="@string/male"
             android:textColor="@color/beige"
             android:textSize="24sp" />
 
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
             android:fontFamily="@font/comixregular"
-            android:text="Mujer"
+            android:text="@string/female"
             android:textColor="@color/beige"
             android:textSize="24sp" />
     </RadioGroup>
