--- a/app/src/main/res/layout/confirm_action.xml
+++ b/app/src/main/res/layout/confirm_action.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/comixloud"
-            android:text="Eliminar a USER"
+            android:text="@string/delete_user"
             android:textColor="#C65D18"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@id/closeDialogButton"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/comixregular"
-            android:text="¿Estas seguro que quieres eliminar el perfil de USER? Se borraran todos sus datos de forma permanente."
+            android:text="@string/delete_user_info_text"
             android:textColor="#C65D18"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
