--- a/app/src/main/res/layout/config_game_page.xml
+++ b/app/src/main/res/layout/config_game_page.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:gravity="left"
+                android:gravity="start"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/infoTitle">
 
