--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="bright_orange">#FF6A00</color>
     <color name="beige">#F8F3D9</color>
     <color name="beige_shadow">#EEF8F3D9</color>
     <color name="blue">#044B83</color>
@@ -16,4 +17,5 @@
     <color name="light_font">#FBFBFB</color>
     <color name="grey_font">#ff9e9e9e</color>
     <color name="text_shadow">#7F000000</color>
+    <color name="yellow">#FAE529</color>
 </resources>
