Agregada pagina de configuracion del juego para los pacientes (se modifico la base da datos). Se arreglaron algunos errores.

--- a/app/src/main/res/layout/user_init_page.xml
+++ b/app/src/main/res/layout/user_init_page.xml
@@ -78,7 +78,7 @@
             android:visibility="gone" />
 
         <android.widget.Button
-            android:id="@+id/informationButton"
+            android:id="@+id/gameConfigButton"
             style="@style/ButtonStyleMenu"
             android:text="@string/configuration"
             android:textSize="16sp"
