Errores arreglados: - Configuracion de volumen de usuario desde el terapeuta - Configuracion de voces desde el usuario - Cambio de tiempo restante a Tiempo Jugado

--- a/app/src/main/res/drawable/seek_bar.xml
+++ b/app/src/main/res/drawable/seek_bar.xml
@@ -22,7 +22,7 @@
             <shape android:shape="line">
                 <stroke
                     android:width="4dp"
-                    android:color="@color/light_blue" />
+                    android:color="@color/darker_orange" />
             </shape>
         </clip>
     </item>
