--- a/app/src/main/res/layout/config_game_patient.xml
+++ b/app/src/main/res/layout/config_game_patient.xml
@@ -32,12 +32,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/volumeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/comixloud"
+                android:text="- Volumenes"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/infoTitle" />
+
             <LinearLayout
+                android:id="@+id/volumesData"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/infoTitle">
+                app:layout_constraintTop_toBottomOf="@id/volumeTitle">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -144,15 +157,61 @@
                         android:textSize="20sp" />
                 </LinearLayout>
 
-                <android.widget.Button
-                    android:id="@+id/confirmButton"
-                    style="@style/ButtonStyleMenu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="8sp"
-                    android:text="@string/confirm_button"
-                    android:textSize="10sp" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/voiceTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/comixloud"
+                android:text="@string/voice_hyphen"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/volumesData" />
+
+            <RadioGroup
+                android:id="@+id/voice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/voiceTitle">
+
+                <RadioButton
+                    android:id="@+id/masculineVoice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:fontFamily="@font/comixregular"
+                    android:text="@string/masculine"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+
+                <RadioButton
+                    android:id="@+id/feminineVoice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:fontFamily="@font/comixregular"
+                    android:text="@string/feminine"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+            </RadioGroup>
+
+            <android.widget.Button
+                android:id="@+id/confirmButton"
+                style="@style/ButtonStyleMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="8sp"
+                android:text="@string/confirm_button"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/voice"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
